[package]
name = "libheman"
version = "0.1.0"
edition = "2021"
authors = ["Sven Siegmund <sven.siegmund@gmail.com>"]
description = "Library for HTTP error manual"
repository = "https://github.com/fleetingbytes/heman/"
license-file = "LICENSE"
keywords = ["tools", "http", "documentation"]
categories = ["library"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

